--- a/riptide_autonomy/cfg/task_execution.yaml
+++ b/riptide_autonomy/cfg/task_execution.yaml
@@ -1,5 +1,5 @@
 Task_Execution:
-  task_order: [0] #[4,6] or [0]
+  task_order: [4, 6] #[4,6] or [0]
   run_single_task: false
   relative_current_x: 0.0 #  Where the vehicle starts relative to task [m]
   relative_current_y: 0.0 # Where the vehicle starts relative to task [m]
