--- a/riptide_autonomy/cfg/tasks.yaml
+++ b/riptide_autonomy/cfg/tasks.yaml
@@ -66,19 +66,19 @@ tasks: [
       id: 4,
       name: "Slots",
       plane: 0,
-      search_depth: 0,
+      search_depth: 0.2,
       search_accel: 0.8,
       torpedo_offset: {
         port: { y: 0, z: 50 },
         stbd: { y: 0, z: 50 }
       },
-      big_red_bbox_height: 0.1,
+      big_red_bbox_height: 0.4,
       fruit_bbox_height: 0.5,
       pneumatics_duration: 200,
       objects: ["Slots_Fruit", "Slots_Big_Red"],
       thresholds: [0.99, 0.1],
       align_thresh: 50, # [pixels]
-      bbox_thresh: 0, # [pixels]
+      bbox_thresh: 30, # [pixels]
       detection_duration: 1, # [s]
       detections_req: 8 # [number]
     },
@@ -102,7 +102,7 @@ tasks: [
       id: 6,
       name: "Roulette",
       plane: 1,
-      search_depth: 1.0,
+      search_depth: .2,
       search_accel: 0.8,
       marker_drop_depth: 1.8, # [m]
       objects: ["Roulette"],
