--- a/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
+++ b/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
@@ -3,19 +3,15 @@ yolo_model:
   config_file:
     name: yolov3-tiny_RoboSub18.cfg
   weight_file:
-    name: yolov3-tiny_RoboSub18_330000.weights
+    name: yolov3-tiny_RoboSub18_100000.weights
   threshold:
     value: 0.1 # Leave small b/c the yolo_processor will handle thresholding
   detection_classes:
     names:
-      - Casino_Gate_Black
-      - Casino_Gate_Red
-      - Dice1
-      - Dice2
+      - GFlap
       - Dice5
       - Dice6
-      - Path_Marker
-      - Roulette
-      - Buy_Gold_Chip
       - Slots_Fruit
       - Slots_Big_Red
+      - Roulette
+      - Buy_Gold_Chip
