--- a/riptide_autonomy/cfg/task_execution.yaml
+++ b/riptide_autonomy/cfg/task_execution.yaml
@@ -1,10 +1,10 @@
 Task_Execution:
-  task_order: [4, 6] #[4,6] or [0]
+  task_order: [0, 9, 4, 6, 8]
   run_single_task: false
   relative_current_x: 0.0 #  Where the vehicle starts relative to task [m]
   relative_current_y: 0.0 # Where the vehicle starts relative to task [m]
-  tslam_brake_duration: 0.5 # [s]
-  tslam_velocity: 0.7 # [m/s] MUST use with accel of 0.8 m/s
+  tslam_brake_duration: 1 # [s]
+  tslam_velocity: 0.53 # [m/s] MUST use with accel of 0.8 m/s
 Controller_Thresholds:
   depth_thresh: 0.3 # [m]
   roll_thresh: 5 # [deg]
