--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -32,6 +32,7 @@ add_message_files(
     DepthCommand.msg
     AttitudeCommand.msg
     Acoustics.msg
+    AcousticsCommand.msg
     Pneumatics.msg
     Constants.msg
     ThrusterResiduals.msg
