--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -31,7 +31,7 @@ add_message_files(
     AlignmentCommand.msg
     DepthCommand.msg
     AttitudeCommand.msg
-    Acoustics.msg
+    AcousticsStatus.msg
     AcousticsCommand.msg
     Pneumatics.msg
     Constants.msg
