--- a/riptide_controllers/cfg/thruster_config_copro.yaml
+++ b/riptide_controllers/cfg/thruster_config_copro.yaml
@@ -1,65 +1,44 @@
-# All SLOPE's in [pwm/N], all XINT's in [pwm]
-SWA:
-  POS:
-    SLOPE: -8.721485
-    XINT: 1458
-  NEG:
-    SLOPE: -8.004653
-    XINT: 1519
-  ENABLE: true
-SWF:
-  POS:
-    SLOPE: 7.132864
-    XINT: 1517
-  NEG:
-    SLOPE: 8.081880
-    XINT: 1465
-  ENABLE: true
-SPL:
-  POS:
-    SLOPE: -8.191769
-    XINT: 1466
-  NEG:
-    SLOPE: -7.039311
-    XINT: 1517
-  ENABLE: true
-SSL:
-  POS:
-    SLOPE: 7.982523
-    XINT: 1517 #1466 in original file
-  NEG:
-    SLOPE: 7.829684
-    XINT: 1466 #1517 in original file
-  ENABLE: true
-HPF: # Previously HSA on old Riptide
-  POS:
-    SLOPE: -7.954310
-    XINT: 1465
-  NEG:
-    SLOPE: -6.814752
-    XINT: 1519
-  ENABLE: true
-HPA:
-  POS:
-    SLOPE: 7.334681
-    XINT: 1516
-  NEG:
-    SLOPE: 8.067786
-    XINT: 1460
-  ENABLE: true
-HSA: # Previously HPF on old Riptide
-  POS:
-    SLOPE: -7.900563
-    XINT: 1465
-  NEG:
-    SLOPE: -7.168297
-    XINT: 1519
-  ENABLE: true
-HSF:
-  POS:
-    SLOPE: 7.372538
-    XINT: 1516
-  NEG:
-    SLOPE: 8.461324
-    XINT: 1463
-  ENABLE: true
+# Linear Fit for Thruster Force to ESC pwm: y = mx + b
+# All SLOPEs in [pwm/N], all YINTs in [pwm]
+# Positive Thrust: Propeller moves fluid from the cone (bottom) towards the dome (top)
+# CW: Defines thrusters in which CW rotation of propeller generates POSITIVE thrust
+# CCW: Defines thrusters in which CCW rotation of propeller generates POSITIVE thrust
+# NOTE: Three regions - Deadband, Startup (SU), and Primary
+CCW:
+  MIN_THRUST: 0.200000
+  STARTUP_THRUST: 1.500000
+  SU_POS_THRUST:
+    SLOPE: -22.500000
+    YINT: 1450
+  SU_NEG_THRUST:
+    SLOPE: -28.600000
+    YINT: 1493
+  POS_THRUST:
+    SLOPE: -5.700000
+    YINT: 1420
+  NEG_THRUST:
+    SLOPE: -7.500000
+    YINT: 1527
+CW:
+  MIN_THRUST: 0.200000
+  STARTUP_THRUST: 1.500000
+  SU_POS_THRUST:
+    SLOPE: 22.500000
+    YINT: 1500
+  SU_NEG_THRUST:
+    SLOPE: 28.600000
+    YINT: 1457
+  POS_THRUST:
+    SLOPE: 5.700000
+    YINT: 1530
+  NEG_THRUST:
+    SLOPE: 7.500000
+    YINT: 1423
+ENABLE_SPL: true
+ENABLE_SSL: true
+ENABLE_SWF: true
+ENABLE_SWA: true
+ENABLE_HPF: true
+ENABLE_HSF: true
+ENABLE_HPA: true
+ENABLE_HSA: true
