--- a/riptide_gnc/CMakeLists.txt
+++ b/riptide_gnc/CMakeLists.txt
@@ -23,6 +23,16 @@ set(ATTITUDE_EDKF
   src/attitude_edkf.cpp
 )
 
+set(POSE_EDKF
+  src/kalman_filter.cpp
+  src/pose_edkf.cpp
+  src/pose_ekf_suite.cpp
+)
+
 add_executable(attitude_edkf_interface src/attitude_edkf_interface.cpp ${ATTITUDE_EDKF})
 target_link_libraries(attitude_edkf_interface ${catkin_LIBRARIES})
 add_dependencies(attitude_edkf_interface ${catkin_EXPORTED_TARGETS})
+
+add_executable(pose_edkf_interface src/attitude_edkf_interface.cpp ${POSE_EDKF})
+target_link_libraries(pose_edkf_interface ${catkin_LIBRARIES})
+add_dependencies(pose_edkf_interface ${catkin_EXPORTED_TARGETS})
