Added pass-by-reference. Started working on jacobians for trans ekf

--- a/riptide_gnc/CMakeLists.txt
+++ b/riptide_gnc/CMakeLists.txt
@@ -19,11 +19,11 @@ catkin_package(INCLUDE_DIRS include)
 include_directories(include ${catkin_INCLUDE_DIRS} ${Eigen3_INCLUDE_DIRS})
 
 set(POSE_EDKF
-  src/kalman_filter.cpp
-  src/linear_motion_ekf_suite.cpp
+  #src/kalman_filter.cpp
+  #src/linear_motion_ekf_suite.cpp
   #src/pose_ekf.cpp
 )
 
-#add_executable(pose_edkf_interface src/pose_edkf_interface.cpp ${POSE_EDKF})
-#target_link_libraries(pose_edkf_interface ${catkin_LIBRARIES})
-#add_dependencies(pose_edkf_interface ${catkin_EXPORTED_TARGETS})
+add_executable(pose_edkf_interface src/pose_edkf_interface.cpp ${POSE_EDKF})
+target_link_libraries(pose_edkf_interface ${catkin_LIBRARIES})
+add_dependencies(pose_edkf_interface ${catkin_EXPORTED_TARGETS})
