Got ceres to work with new EOM struct (much cleaner)

--- a/riptide_controllers/CMakeLists.txt
+++ b/riptide_controllers/CMakeLists.txt
@@ -25,6 +25,8 @@ find_package(catkin REQUIRED
 
 find_package(Ceres REQUIRED)
 
+find_package(Eigen3 3.3 REQUIRED)
+
 generate_dynamic_reconfigure_options(
   cfg/VehicleProperties.cfg
 )
@@ -41,6 +43,7 @@ roslint_cpp()
 include_directories(include ${catkin_INCLUDE_DIRS}
   ${CERES_INCLUDE_DIRS}
   ${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake
+  {Eigen3_INCLUDE_DIRS}
 )
 
 add_executable(thruster_controller src/thruster_controller.cpp)
