Integrated copro and had to "flip" 4 thrusters

--- a/riptide_controllers/cfg/thruster_force_vs_pwm.yaml
+++ b/riptide_controllers/cfg/thruster_force_vs_pwm.yaml
@@ -4,31 +4,31 @@
 TYPE0:
   MIN_THRUST: 0.200000
   STARTUP_THRUST: 1.500000
-  SU_POS_THRUST:
-    SLOPE: 28.600000
-    YINT: 1457
   SU_NEG_THRUST:
+    SLOPE: 28.600000
+    YINT: 1480 #1457
+  SU_POS_THRUST:
     SLOPE: 22.500000
-    YINT: 1500
-  POS_THRUST:
-    SLOPE: 7.500000
-    YINT: 1423
+    YINT: 1523 #1500
   NEG_THRUST:
+    SLOPE: 7.500000
+    YINT: 1446 #1423
+  POS_THRUST:
     SLOPE: 5.700000
-    YINT: 1530
+    YINT: 1553 #1530
 TYPE1:
   MIN_THRUST: 0.200000
   STARTUP_THRUST: 1.500000
-  SU_POS_THRUST:
-    SLOPE: -28.600000
-    YINT: 1493
   SU_NEG_THRUST:
+    SLOPE: -28.600000
+    YINT: 1516 #1493
+  SU_POS_THRUST:
     SLOPE: -22.500000
-    YINT: 1450 
-  POS_THRUST:
-    SLOPE: -7.500000
-    YINT: 1527
+    YINT: 1473 #1450 
   NEG_THRUST:
+    SLOPE: -7.500000
+    YINT: 1550 #1527
+  POS_THRUST:
     SLOPE: -5.700000
-    YINT: 1420
+    YINT: 1443 #1420
   
