--- a/riptide_vision/package.xml
+++ b/riptide_vision/package.xml
@@ -21,6 +21,8 @@
   <build_depend>roslint</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>compressed_image_transport</build_depend>
   <build_depend>OpenCV</build_depend>
 
   <run_depend>riptide_msgs</run_depend>
@@ -29,6 +31,8 @@
   <run_depend>roslaunch</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>image_transport</run_depend>
+  <run_depend>compressed_image_transport</run_depend>
   <run_depend>OpenCV</run_depend>
 
   <export>
