--- a/riptide_controllers/cfg/AttitudeController.cfg
+++ b/riptide_controllers/cfg/AttitudeController.cfg
@@ -10,13 +10,13 @@ yaw = gen.add_group("yaw")
 
 #         Name               Type      Level  Description                Default Min     Max
 roll.add( "r_max_velocity",    double_t, 1,     "Max velocity in deg/s",   90,     0,      360)
-roll.add( "r_decel_rate",      double_t, 1,     "Decel rate in deg/s/s",   180,    0,      720)
+roll.add( "r_decel_rate",      double_t, 1,     "How quickly robot slows", 5,      0,      20)
 roll.add( "r_velocity_p",      double_t, 1,     "P value for velocity",    1,      0,      999)
 pitch.add("p_max_velocity",    double_t, 2,     "Max velocity in deg/s",   90,     0,      360)
-pitch.add("p_decel_rate",      double_t, 2,     "Decel rate in deg/s/s",   180,    0,      720)
+pitch.add("p_decel_rate",      double_t, 2,     "How quickly robot slows", 5,      0,      20)
 pitch.add("p_velocity_p",      double_t, 2,     "P value for velocity",    1,      0,      999)
 yaw.add(  "y_max_velocity",    double_t, 3,     "Max velocity in deg/s",   90,     0,      360)
-yaw.add(  "y_decel_rate",      double_t, 3,     "Decel rate in deg/s/s",   180,    0,      720)
+yaw.add(  "y_decel_rate",      double_t, 3,     "How quickly robot slows", 5,      0,      20)
 yaw.add(  "y_velocity_p",      double_t, 3,     "P value for velocity",    1,      0,      999)
                  # PkgName #NodeName              #Prefix for generated .h include file, e.g. ParametersConfig.py
 exit(gen.generate(PACKAGE, "attitude_controller", "AttitudeController"))
