--- a/riptide_controllers/package.xml
+++ b/riptide_controllers/package.xml
@@ -27,12 +27,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>control_toolbox</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>riptide_msgs</run_depend>
   <run_depend>roslaunch</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>control_toolbox</run_depend>
 
   <export>
   </export>
