--- a/riptide_docker/docker/Dockerfile
+++ b/riptide_docker/docker/Dockerfile
@@ -69,8 +69,7 @@ RUN bin/bash -c "rosdep install --from-paths ~/osu-uwrt/riptide_software/src -i 
                  rm -rf src && \
                  git clone https://github.com/juched/riptide_software.git src &&  \
                  cd src && \
-                 git checkout origin autonomy && \
-                 git clone https://github.com/ros-drivers/pointgrey_camera_driver.git"
+                 git pull origin autonomy"
 
 RUN bin/bash -c  "source /opt/ros/kinetic/setup.bash && \
                  cd ~/osu-uwrt/riptide_software/src/riptide_utilities/setup_scripts/ && \
