--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -25,6 +25,7 @@
   <build_depend>tf</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>eigen</build_depend>
 
   <run_depend>riptide_msgs</run_depend>
   <run_depend>roslaunch</run_depend>
