--- a/riptide_controllers/CMakeLists.txt
+++ b/riptide_controllers/CMakeLists.txt
@@ -35,7 +35,8 @@ generate_dynamic_reconfigure_options(
 
 add_action_files(
   DIRECTORY action
-  FILES Calibration.action
+  FILES Calibrate.action
+  GoToDepth.action
 )
 
 generate_messages(
