--- a/riptide_autonomy/package.xml
+++ b/riptide_autonomy/package.xml
@@ -56,11 +56,13 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>riptide_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
