Add velocity controller

--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -41,6 +41,7 @@ add_message_files(
     CalibrateAlignment.msg
     NetLoad.msg
     LinearCommand.msg
+    VelocityCommand.msg
 )
 
 generate_messages(
