Add velocity controller and go to task action.

--- a/riptide_controllers/cfg/LinearController.cfg
+++ b/riptide_controllers/cfg/LinearController.cfg
@@ -4,15 +4,11 @@ PACKAGE="riptide_controllers"
 from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
-linearX = gen.add_group("linearX")
-linearY = gen.add_group("linearY")
+X = gen.add_group("X")
+Y = gen.add_group("Y")
 
-#            Name                  Type   Level  Description              Default  Min     Max
-linearX.add("x_cruise_velocity",  double_t, 1, "Driving speed in m/s",    0,5,      0,     2)
-linearX.add("x_decel_rate",       double_t, 1, "How quickly robot slows", 0.5,      0,     1)
-linearX.add("x_velocity_p",       double_t, 1, "P value for velocity",    0,2,      0,     999)
-linearY.add("y_cruise_velocity",  double_t, 2, "Driving speed in m/s",    0,5,      0,     2)
-linearY.add("y_decel_rate",       double_t, 2, "How quickly robot slows", 0.5,      0,     1)
-linearY.add("y_velocity_p",       double_t, 2, "P value for velocity",    0,2,      0,     999)
+#            Name                  Type   Level  Description          Default  Min     Max
+X.add("x_velocity_p",       double_t, 1, "P value for velocity.x",    0,2,      0,     999)
+Y.add("y_velocity_p",       double_t, 2, "P value for velocity.y",    0,2,      0,     999)
                  # PkgName #NodeName              #Prefix for generated .h include file, e.g. ParametersConfig.py
 exit(gen.generate(PACKAGE, "linear_controller", "LinearController"))
