--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -41,7 +41,7 @@ add_message_files(
     CalibrateAlignment.msg
     NetLoad.msg
     LinearCommand.msg
-    VelocityCommand.msg
+    Dvl.msg
 )
 
 generate_messages(
