--- a/riptide_controllers/cfg/LinearController.cfg
+++ b/riptide_controllers/cfg/LinearController.cfg
@@ -4,11 +4,9 @@ PACKAGE="riptide_controllers"
 from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
-X = gen.add_group("X")
-Y = gen.add_group("Y")
 
 #            Name                  Type   Level  Description          Default  Min     Max
-X.add("x_velocity_p",       double_t, 1, "P value for velocity.x",    0,2,      0,     999)
-Y.add("y_velocity_p",       double_t, 2, "P value for velocity.y",    0,2,      0,     999)
+gen.add("x_velocity_p",       double_t, 1, "P value for velocity.x",    0,2,      0,     999)
+gen.add("y_velocity_p",       double_t, 1, "P value for velocity.y",    0,2,      0,     999)
                  # PkgName #NodeName              #Prefix for generated .h include file, e.g. ParametersConfig.py
 exit(gen.generate(PACKAGE, "linear_controller", "LinearController"))
