--- a/riptide_controllers/CMakeLists.txt
+++ b/riptide_controllers/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(catkin REQUIRED
     tf
     control_toolbox
     actionlib_msgs
+    darknet_ros_msgs
 )
 
 find_package(Ceres REQUIRED)
@@ -32,6 +33,7 @@ generate_dynamic_reconfigure_options(
   cfg/VehicleProperties.cfg
   cfg/AttitudeController.cfg
   cfg/LinearController.cfg
+  cfg/AlignmentController.cfg
 )
 
 add_action_files(
@@ -79,10 +81,6 @@ cmake_host_system_information(RESULT _host_name QUERY HOSTNAME)
 add_executable(depth_controller src/depth_controller.cpp)
 target_link_libraries(depth_controller ${catkin_LIBRARIES})
 add_dependencies(depth_controller ${catkin_EXPORTED_TARGETS})
-
-add_executable(alignment_controller src/alignment_controller.cpp)
-target_link_libraries(alignment_controller ${catkin_LIBRARIES})
-add_dependencies(alignment_controller ${catkin_EXPORTED_TARGETS})
 
 add_executable(pwm_controller src/pwm_controller.cpp)
 target_link_libraries(pwm_controller ${catkin_LIBRARIES} yaml-cpp)
