modified launch file for alignment controller

--- a/riptide_controllers/cfg/AlignmentController.cfg
+++ b/riptide_controllers/cfg/AlignmentController.cfg
@@ -4,13 +4,12 @@ PACKAGE="riptide_controllers"
 from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
-xBox = gen.add_group("xBox")
-yBox = gen.add_group("yBox")
+alignment = gen.add_group("alignment")
 
-#         Name               Type      Level  Description             Default Min     Max
-xBox.add( "x_max_force",    double_t, 1,     "Max force in Newton",   40,     0,      60)
-xBox.add( "x_velocity_p",   double_t, 1,     "P value for velocity",  2,     0,      999)
-yBox.add( "y_max_force",    double_t, 1,     "Max force in Newton",   40,      0,      60)
-yBox.add( "y_velocity_p",   double_t, 1,     "P value for velocity",  2,      0,      999)
+#         Name               Type      Level    Description             Default Min     Max
+alignment.add( "x_force_p",    double_t, 1,     "P value for force in x",   2,     0,      100)
+alignment.add( "y_force_p",      double_t, 1,   "P value for force in y",   2,     0,      100)
+alignment.add( "y_force_p",    double_t, 1,     "P value for force in y",   2,     0,      100)
+alignment.add( "max_force",      double_t, 1,    "Max force in Newton",     40,    0,      200)
                  # PkgName #NodeName              #Prefix for generated .h include file, e.g. ParametersConfig.py
 exit(gen.generate(PACKAGE, "alignment_controller", "AlignmentController"))
