Pool test fixes

--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(catkin REQUIRED
     message_generation
     sensor_msgs
     cv_bridge
+    dynamic_reconfigure
 )
 
 find_package(Eigen3 REQUIRED)
@@ -30,7 +31,16 @@ add_service_files(FILES Pneumatics.srv)
 
 generate_messages()
 
-catkin_package(INCLUDE_DIRS include)
+generate_dynamic_reconfigure_options(
+  cfg/Torpedo.cfg
+)
+
+catkin_package(
+  INCLUDE_DIRS
+    include
+  CATKIN_DEPENDS
+    dynamic_reconfigure
+)
 find_package(OpenCV REQUIRED) # To include, OpenCV, this MUST go BEFORE include_directories()
 include_directories(include ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} {EIGEN3_INCLUDE_DIR} resources/acoustics/include)
 
