--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -26,8 +26,10 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
 
   <run_depend>riptide_msgs</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>roslaunch</run_depend>
   <run_depend>pointgrey_camera_driver</run_depend>
   <run_depend>sensor_msgs</run_depend>
