--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -27,6 +27,8 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>eigen</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>eigen_conversions</build_depend>
 
   <run_depend>riptide_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
@@ -38,6 +40,8 @@
   <run_depend>image_proc</run_depend>
   <run_depend>stereo_image_proc</run_depend>
   <run_depend>camera_calibration</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>eigen_conversions</run_depend>
 
   <export>
   </export>
