--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -24,7 +24,7 @@ add_action_files(
   BuoyTask.action
   DecapTask.action
   GoToFinals.action
-  Navigate.action
+  Search.action
   ExposeTask.action
   GarlicTask.action
 )
