--- a/riptide_gnc/CMakeLists.txt
+++ b/riptide_gnc/CMakeLists.txt
@@ -22,11 +22,15 @@ catkin_package(
 )
 include_directories(include ${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
 
-add_executable(trans_ekf_combinator src/trans_ekf_combinator_node.cpp src/trans_ekf_combinator.cpp)
-target_link_libraries(trans_ekf_combinator ${catkin_LIBRARIES})
-add_dependencies(trans_ekf_combinator ${catkin_EXPORTED_TARGETS})
+cmake_host_system_information(RESULT _host_name QUERY HOSTNAME)
 
-add_executable(gnc_thrust_converter src/gnc_thrust_converter_node.cpp src/gnc_thrust_converter.cpp)
-target_link_libraries(gnc_thrust_converter ${catkin_LIBRARIES})
-add_dependencies(gnc_thrust_converter ${catkin_EXPORTED_TARGETS})
+if(NOT _host_name MATCHES "jetson")
+  add_executable(trans_ekf_combinator src/trans_ekf_combinator_node.cpp src/trans_ekf_combinator.cpp)
+  target_link_libraries(trans_ekf_combinator ${catkin_LIBRARIES})
+  add_dependencies(trans_ekf_combinator ${catkin_EXPORTED_TARGETS})
+
+  add_executable(gnc_thrust_converter src/gnc_thrust_converter_node.cpp src/gnc_thrust_converter.cpp)
+  target_link_libraries(gnc_thrust_converter ${catkin_LIBRARIES})
+  add_dependencies(gnc_thrust_converter ${catkin_EXPORTED_TARGETS})
+endif()
 
